--- a/frontend/src/components/XmlDisplay.astro
+++ b/frontend/src/components/XmlDisplay.astro
@@ -19,7 +19,7 @@ import "../styles/forms.css";
       <button type="button" class="xml-toggle" id="xml-toggle">Show Raw XML</button>
     </div>
   </div>
-  <div class="xml-feed-content hidden" id="xml-feed-content">
+  <div class="xml-feed-content" id="xml-feed-content">
     <iframe id="rss-iframe" src="" width="100%" height="800" frameborder="0" class="rss-iframe"></iframe>
   </div>
   <div class="xml-raw-content hidden" id="xml-raw-content">
